# chainamps

./: 2VE_DRV.cpp  CITATION.txt  CMakeLists.txt  ChainAMPS.cpp  Config.h.in  DMRG.hpp  DMRG_routines.cpp  DMRG_routines.hpp  FINITE_MEASURE.cpp  FiniteMPS.cpp  FiniteMPS.hpp  LICENSE.txt  MPO_matrix.cpp  MPO_matrix.hpp  MPS_matrix.cpp  MPS_matrix.hpp  MPX.cpp  MPX.hpp  MPXIndex.cpp  MPXIndex.hpp  MPX_matrix.cpp  MPX_matrix.hpp  Makefile_cluster  Makefile_indep  README.md  STORE_MODEL.cpp  TEBD_DRV.cpp  TEBD_DYN_MEASURE.cpp  TEBD_routines.cpp  TEBD_routines.hpp  TwoVertexEvolution.cpp  TwoVertexEvolution.hpp  TwoVertexOnly.cpp  TwoVertexOnly.hpp  UNITCELL_MEASURE.cpp  UnitCell.cpp  UnitCell.hpp  ajaj_common.hpp  arpack_interface.cpp  arpack_interface.hpp  (+29 more)
doc/html/: _chain_a_m_p_s_8cpp.html  _d_m_r_g__routines_8hpp.html  _d_m_r_g__routines_8hpp_source.html  _m_p_x_8hpp.html  _m_p_x_8hpp_source.html  _measurement_8hpp.html  _measurement_8hpp_source.html  _t_e_b_d___d_r_v_8cpp.html  _t_e_b_d__routines_8hpp.html  _t_e_b_d__routines_8hpp_source.html  _u_n_i_t_c_e_l_l___m_e_a_s_u_r_e_8cpp.html  ajaj__common_8hpp.html  ajaj__common_8hpp_source.html  annotated.html  arpack__interface_8hpp.html  arpack__interface_8hpp_source.html  classajaj_1_1_base___args-members.html  classajaj_1_1_base___args.html  classajaj_1_1_blocks_structure-members.html  classajaj_1_1_blocks_structure.html  classajaj_1_1_data_output-members.html  classajaj_1_1_data_output.html  classajaj_1_1_dense_decomposition_base-members.html  classajaj_1_1_dense_decomposition_base.html  classajaj_1_1_dense_h_e_d-members.html  classajaj_1_1_dense_h_e_d.html  classajaj_1_1_dense_matrix-members.html  classajaj_1_1_dense_matrix.html  classajaj_1_1_dense_n_h_e_d-members.html  classajaj_1_1_dense_n_h_e_d.html  classajaj_1_1_dense_s_v_d-members.html  classajaj_1_1_dense_s_v_d.html  classajaj_1_1_eigen_state-members.html  classajaj_1_1_eigen_state.html  classajaj_1_1_eigen_state_array-members.html  classajaj_1_1_eigen_state_array.html  classajaj_1_1_excited_state_finite_d_m_r_g-members.html  classajaj_1_1_excited_state_finite_d_m_r_g.html  classajaj_1_1_finite_d_m_r_g-members.html  classajaj_1_1_finite_d_m_r_g.html  (+176 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+41 more)
examples/: README.md  continuum_Ising_example_input  continuum_free_fermion_example_input  ll_example_input  old_xxx_example_input  spin_half_example_input  user_defined_example_input  vertex_basis.in  vertex_hamiltonian.in  vertex_operators.in
examples/built_in/Luttinger_liquid_chains/: README.md  ll_input
examples/built_in/continuum_Ising_chains/: continuum_Ising_input
examples/built_in/continuum_free_fermion_chains/: continuum_free_fermion_input
examples/built_in/xxx_lattice_chains/: README.md
examples/user_defined/quench_example/: README.md  initial_input  quench_input
examples/user_defined/quench_example/initial_defs/: vertex_basis.in  vertex_hamiltonian.in  vertex_operators.in
examples/user_defined/quench_example/quench_defs/: vertex_basis.in  vertex_hamiltonian.in
examples/user_defined/spin_half_example/: README.md  Sy.in  Sz.in  example_input  vertex_basis.in
examples/user_defined/spin_half_example_1/: Sx.in  user_defined_example_input  vertex_basis.in  vertex_operators.in
examples/user_defined/spin_half_example_2/: spin_half_example2_input  spin_half_example2_input~  vertex_hamiltonian.in  vertex_operators.in
examples/user_defined/time_dep_quench_example/: README.md  Sx.in  Sy.in  Sz.in  time_dep_input  user_defined_example_input  x-state
vertex_generators/: continuum_Ising_generator.hpp  continuum_Ising_generator_no_sector.hpp  continuum_ff_generator.hpp  ll_generator.hpp  ll_generator.semiclassical.hpp  llsc_generator.hpp  old_xxx_generator.hpp  spin_half_generator.hpp
vertex_generators/ll/: boson_state_generation.cpp  chiral_states_bosons_fA.hpp  element_computation_bosons.hpp  me_chir_bosons.hpp  non_chir_me_no_parity.hpp  non_chiral_states_bosons_no_parity_fA.hpp
